update README.md, docs