@@ -5,10 +5,11 @@ O(1) String Searcher provides a data structure which grants an **O(1)-time-compl
 ## Table of content
 
 1. [Build library](#build-library)
-1. [Library Usage](#library-usage)
-1. [Alogrithm](#alogrithm)
+1. [Library usage](#library-usage)
+1. [Algorithm](#algorithm)
+1. [The O(1)-time-complexity variation](#the-o1-time-complexity-variation)
 1. [Class diagram](#class-diagram)
-1. [Limitations and solutions](#limitations-and-solutions)
+1. [Extensibility](#extensibility)
 1. [Reminder](#reminder)
 1. [License](#license)
 
@@ -27,12 +28,8 @@ O(1) String Searcher provides a data structure which grants an **O(1)-time-compl
         --module-source-path . $(find instantstringsearcher -name "*.java")  $(find junittest -name "*.java") \
         -d build
     ```
-1. Run the Junit to test the library.
-    ```bash
-    java --module-path build:junittest/dependencies -m junittest/github.eightoooeight.instantstringsearcher.junittest.TestRunner
-    ```
 
-## Library Usage
+## Library usage
 
 1. Import the library
     ```java
@@ -51,34 +48,70 @@ O(1) String Searcher provides a data structure which grants an **O(1)-time-compl
     <List>String searchResult = instantStringSearcher.searchtString(strToSearch);
     ```
 
-## Alogrithm
+## Algorithm
 
-The alogrithm: 
+![Algorithm figure][algo-figure]
 
-1. The strings to be inserted is saved into a trie tree.
-  ![Triel formation figure][trie-formation-figure]
-1. The node with the keychain as same as the searching words would be bound with the search result's string IDs, e.g. when the user is searching for "BC", the node with the keychain, "BC", would have the string IDs of the search result.
-1. Every node is assigned a separate file to store its data.
-1. An O(1) method is provided to locate the node file with a specified keychain.
-1. May only load the node file that is responsible for the search result, i.e. no need to load the whole trie.
+Consider that this string searcher is particularly useful only when the string amount is too massive, this library is designed to:
 
-Consider that this string searcher is particularly useful only when the string amount is too massive, this library is designed to save the trie into the persistent storage and to be able to load only a specified node in response to the string search, so that the RAM/swapping will not be overwhelmed and a quick node loading can be guaranteed.
+1. save the trie into the persistent storage, and
+1. to be able to load just the node that is responsible to the string search
+
+so that the RAM/swapping will not be overwhelmed and a quick node loading can be guaranteed.
+
+## The O(1)-time-complexity variation
+
+There are various possilbe implementations of the above [algorithm](#algorithm) and in this library, one of the O(1)-variations is implemented.
+
+The O(1)-variation 1:
+
+1. O(1) function to locate the node file that is responsible to the string search.
+    1. Store the node with keychain, node-keychain, into the file, \<Trie-file-directory-path\>/\<node-keychain\>.txt.
+    1. Get the node filepath by concatenating the Trie-file-directory-path with /node-keychain.txt, which is in O(1) time complexity.
+1. Store the strings instead of the string IDs into the node file so that the search result can obtained by simply loading the file. This gives an absolute O(1) time complexity but with a higher space complexity and various limitations.
+
+**The O(1)-variation 2 (the variation implemented)**:
+
+1. O(1) function to locate the node file that is responsible to the string search.
+    1. Store the node with keychain, node-keychain, into the file, \<Trie-file-directory-path\>/\<node-keychain\>.txt.
+    1. Get the node filepath by concatenating the Trie-file-directory-path with /node-keychain.txt, which is in O(1) time complexity.
+1. Unlike variation 1, the string IDs are stored into the node files and hence, the search result cannot be obtained by simply loading the node file.
+1. A file, rawData.txt, is used to store the inserted strings. Every time a string is inserted, the string is appended to this file.
+1. Using the string IDs to retrieve strings from rawData.txt.
+1. The string IDs are in the form of \<start-position\>-\<end-position\>, where the start-position refers to the starting position of its associated string in rawData.txt, and similar for the end-position.
+1. Using random access to read string from the start-position to the end-position in rawData.txt to retrieve the string, which gives an "O(1)" time complexity (not absolutely O(1) as it varies with persistent storage fragmentation).
+1. O(1) function to locate the node file + O(1) function to retrieve the strings using the string IDs, i.e. an overall O(1) time complexity is achieved.
+
+**The limitations of the O(1)-variation 2**:
+
+1. In this library, the node file names are the node keychains. Consequently, it will not be able to handle the strings with characters invalid to be a part of the filenames.
+1. In this library, the node file names are the node keychains. Consequently, it will not be able to handle lengthy strings due to the filepath and filename length limitation from the filesystems, e.g. maximum 255 filename length on EXT4 on Linux.
+
+**The possible solutions to the limitations**:
+
+1. Not directly using the keychain to be the filename of the node files to resolve the limitation (1).
+1. Add a dictionary layer between the nodes and the node files to resolve both limitation (1) & (2).
 
 ## Class diagram
 
 ![Class diagram][class-diagram]
 
-## Limitations and solutions
+## Extensibility
 
-Limitations:
-
-1. In this library, the node file names are the node keychains. Consequently, it will not be able to handle the strings with characters invalid to be a part of the filenames.
-1. In this library, the node file names are the node keychains. Consequently, it will not be able to handle lengthy strings due to the filepath and filename length limitation from the filesystems, e.g. maximum 255 filename length on EXT4 on Linux.
-
-Solutions:
-
-1. Modify the TrieNodeAndFilepathMapper class to resolve the invalid filename character problem.
-1. Add a dictionary layer between the nodes and the files to cope with the above 2 limitations.
+1. This library adopts SOLID principles and it is suggested to extend its feature(s) in an open-closed manner, e.g. to resolve the limitation (1) mentioned in [The O(1)-time-complexity variation](#the-o1-time-complexity-variation), create a new class implementing ITrieNodeAndFilepathMapper to remap the node and the node files.
+1. To facilitate the development, a simple JUnit test module is provided. Add your own test cases into the module and run below commands to test the library.
+    1. Build the library with javac.
+        ```bash cd <O(1)-string-searcher-directory>
+        javac --module-path junittest/dependencies/junit-4.10.jar \
+            --add-modules junit \
+            --patch-module junit=junit-4.10.jar \
+            --module-source-path . $(find instantstringsearcher -name "*.java")  $(find junittest -name "*.java") \
+            -d build
+        ```
+    1. Run the Junit to test the library.
+        ```bash
+        java --module-path build:junittest/dependencies -m junittest/github.eightoooeight.instantstringsearcher.junittest.TestRunner
+        ```
 
 ## Reminder
 
@@ -90,4 +123,4 @@ Please note that this library is case-sensitive and does not remove the duplicat
 
 [MIT-license]: LICENSE
 [class-diagram]: docs/class-diagram.png
-[trie-formation-figure]: docs/trie-formation.png
+[algo-figure]: docs/algo.png
